lecture 01 02 en: corrections based on Jakub Dupak's feedback
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/01-intro/apo-lecture01-intro-en.tex
+++ b/01-intro/apo-lecture01-intro-en.tex
@@ -688,7 +688,7 @@ This logic circuit is called a full adder.
 \begin{frame}
 \frametitle{Addition -- Ripple Carry Adder}
 
-The simplest multi-bit asthmatics adder is built by connection of one half adder and multiple full adders.
+The simplest multi-bit arithmetic adder is built by connection of one half adder and multiple full adders.
 
 This type of adder is called Ripple Carry Adder (chained full-adders).
 
