lecture 01 en: remove the article to fit into slide area
It may be resolved other way later.

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/02-numbers/apo-lecture02-numbers-en.tex
+++ b/02-numbers/apo-lecture02-numbers-en.tex
@@ -999,7 +999,7 @@ result with four decimal fractional digits \texttt{0.5625}
 \end{columns}
 \bigskip
 
-Exponent addition $-2+0=-2$, but the result of significands multiplication requires normalization, that is exponent is incremented to $-1$.
+Exponent addition $-2+0=-2$, but result of significands multiplication requires normalization, that is exponent is incremented to $-1$.
 
 The correct result is obtained $10.01\text{E}-2 = 1.001\text{E}-1$ $\;\equiv\;$ $0.5625_{(10)}$
 
