Lecture 05 - corrected typo found by Alex Olivier Michaud
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/05-pipeline/lekce05-pipeline.tex
+++ b/05-pipeline/lekce05-pipeline.tex
@@ -419,7 +419,7 @@ QtRvSim \url{https://github.com/cvut/qtrvsim}
 \section{Řídící hazardy}
 
 \begin{frame}
-\frametitle{Řícicí (control) hazardy (instrukce branch a jump)}
+\frametitle{Řídicí (control) hazardy (instrukce branch a jump)}
 \includegraphics[width=0.85\textwidth]{hazard_ctrl.pdf}
 
 \begin{itemize}
